--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,6 +65,7 @@ jobs:
           echo "ROOTFS_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> variables.ini
           echo "AUTO_LOGIN_PASSWORD_PROMPT=Password" >> variables.ini
           echo "AUTO_LOGIN_PASSWORD=oelinux123" >> variables.ini
+          cat variables.ini
           #lava-test-plans --dry-run --variables variables.ini --test-plan "${GITHUB_REPOSITORY#*/}" --device-type "${{ matrix.machine }}" --verbose 10
           lava-test-plans --dry-run --variables variables.ini --test-plan "meta-qcom/${{ matrix.distro.name }}" --device-type "${{ matrix.machine }}" --verbose 10
 
