--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,28 +46,28 @@ jobs:
           cd lava-test-plans && pip install .
           lava-test-plans --help
           #echo "PROJECT_NAME=${GITHUB_REPOSITORY#*/}" >> variables.ini
-          echo "PROJECT_NAME=meta-qcom" >> variables.ini
-          echo "LAVA_JOB_PRIORTIY=50" >> variables.ini
-          echo "DEVICE_TYPE=${{ matrix.machine }}" >> variables.ini
-          echo "OS_INFO=qcom-distro" >> variables.ini
-          echo "BUILD_NUMBER=${{ github.run_id }}-${{ github.run_attempt }}" >> variables.ini
-          echo "DOCKER_IMAGE_POSTPROCESS=ghcr.io/foundriesio/lava-lmp-sign:main" >> variables.ini
-          echo "BOOT_IMG_FILE=boot-apq8096-db820c-qcom-armv8a.img" >> variables.ini
-          echo "ROOTFS_IMG_FILE=core-image-base-qcom-armv8a.rootfs.ext4" >> variables.ini
-          echo "BUILD_DOWNLOAD_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/" >> variables.ini
-          echo "AUTH_HEADER_NAME=Authentication" >> variables.ini
-          echo "AUTH_HEADER_TOKEN=PICANHA_TOKEN" >> variables.ini
+          echo "PROJECT_NAME=meta-qcom" >> qh-variables.ini
+          echo "LAVA_JOB_PRIORTIY=50" >> qh-variables.ini
+          echo "DEVICE_TYPE=${{ matrix.machine }}" >> qh-variables.ini
+          echo "OS_INFO=qcom-distro" >> qh-variables.ini
+          echo "BUILD_NUMBER=${{ github.run_id }}-${{ github.run_attempt }}" >> qh-variables.ini
+          echo "DOCKER_IMAGE_POSTPROCESS=ghcr.io/foundriesio/lava-lmp-sign:main" >> qh-variables.ini
+          echo "BOOT_IMG_FILE=boot-apq8096-db820c-qcom-armv8a.img" >> qh-variables.ini
+          echo "ROOTFS_IMG_FILE=core-image-base-qcom-armv8a.rootfs.ext4" >> qh-variables.ini
+          echo "BUILD_DOWNLOAD_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/" >> qh-variables.ini
+          echo "AUTH_HEADER_NAME=Authentication" >> qh-variables.ini
+          echo "AUTH_HEADER_TOKEN=PICANHA_TOKEN" >> qh-variables.ini
           IMAGE_TYPE="core-image-base"
           if [ "${{ matrix.distro.name }}" = "qcom-distro" ]; then
             IMAGE_TYPE="qcom-multimedia-image"
           fi
-          echo "IMAGE_FILE_NAME=${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> variables.ini
-          echo "ROOTFS_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> variables.ini
-          echo "AUTO_LOGIN_PASSWORD_PROMPT=Password" >> variables.ini
-          echo "AUTO_LOGIN_PASSWORD=oelinux123" >> variables.ini
-          cat variables.ini
-          #lava-test-plans --dry-run --variables variables.ini --test-plan "${GITHUB_REPOSITORY#*/}" --device-type "${{ matrix.machine }}" --verbose 10
-          lava-test-plans --dry-run --variables variables.ini --test-plan "meta-qcom/${{ matrix.distro.name }}" --device-type "${{ matrix.machine }}" --verbose 10
+          echo "IMAGE_FILE_NAME=${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
+          echo "ROOTFS_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
+          echo "AUTO_LOGIN_PASSWORD_PROMPT=Password" >> qh-variables.ini
+          echo "AUTO_LOGIN_PASSWORD=oelinux123" >> qh-variables.ini
+          cat qh-variables.ini
+          #lava-test-plans --dry-run --variables qh-variables.ini --test-plan "${GITHUB_REPOSITORY#*/}" --device-type "${{ matrix.machine }}" --verbose 10
+          lava-test-plans --dry-run --variables qh-variables.ini --test-plan "meta-qcom/${{ matrix.distro.name }}" --device-type "${{ matrix.machine }}" --verbose 10
 
       - name: "Generate testjobs"
         run: |
