--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,7 +93,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: testjobs-${{ matrix.machine }}-${{ matrix.distro.name }}
-          path: ${{ env.MACHINE}}*-${{ matrix.distro.name }}-*.yaml
+          path: ${{ env.MACHINE}}*-${{ matrix.distro.name }}
 
   prepare-job-list:
     needs: prepare-jobs
