--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,11 +38,6 @@ jobs:
           run-id: ${{ inputs.build_id }}
           pattern: build-url_*
 
-      - name: "List files"
-        run: |
-          echo $GITHUB_WORKSPACE
-          ls -R $GITHUB_WORKSPACE
-
       - name: Run lava-test-plans
         run: |
           cd lava-test-plans && pip install .
@@ -69,7 +64,7 @@ jobs:
           echo "AUTO_LOGIN_PASSWORD=oelinux123" >> qh-variables.ini
           cat qh-variables.ini
           #lava-test-plans --dry-run --variables qh-variables.ini --test-plan "${GITHUB_REPOSITORY#*/}" --device-type "${{ matrix.machine }}" --verbose 10
-          lava-test-plans --dry-run --variables qh-variables.ini --test-plan "meta-qcom/${{ matrix.distro.name }}" --device-type "${{ matrix.machine }}" --dry-run-path testjobs-${{ matrix.machine }}-${{ matrix.distro.name }}
+          lava-test-plans --dry-run --variables qh-variables.ini --test-plan "meta-qcom/${{ matrix.distro.name }}" --device-type "${{ matrix.machine }}" --dry-run-path ../testjobs-${{ matrix.machine }}-${{ matrix.distro.name }}
 
       - name: "Generate testjobs"
         run: |
@@ -88,6 +83,11 @@ jobs:
                   echo "MACHINE=${{ matrix.machine }}" >> $GITHUB_ENV
               fi
           fi
+
+      - name: "List files"
+        run: |
+          echo $GITHUB_WORKSPACE
+          ls -R $GITHUB_WORKSPACE
 
       - name: 'Upload test jobs'
         uses: actions/upload-artifact@v4
