--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,8 @@ jobs:
           echo "DOCKER_IMAGE_POSTPROCESS=ghcr.io/foundriesio/lava-lmp-sign:main" >> qh-variables.ini
           echo "BOOT_IMG_FILE=boot-apq8096-db820c-qcom-armv8a.img" >> qh-variables.ini
           echo "ROOTFS_IMG_FILE=core-image-base-qcom-armv8a.rootfs.ext4" >> qh-variables.ini
-          echo "BUILD_DOWNLOAD_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/" >> qh-variables.ini
+          #echo "BUILD_DOWNLOAD_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/" >> qh-variables.ini
+          echo "BUILD_DOWNLOAD_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/qualcomm-linux/meta-qcom/${{ github.run_id }}-${{ github.run_attempt }}/" >> qh-variables.ini
           echo "AUTH_HEADER_NAME=Authentication" >> qh-variables.ini
           echo "AUTH_HEADER_TOKEN=Q_GITHUB_TOKEN" >> qh-variables.ini
           IMAGE_TYPE="core-image-base"
