--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,7 +62,8 @@ jobs:
             IMAGE_TYPE="qcom-multimedia-image"
           fi
           echo "IMAGE_FILE_NAME=${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
-          echo "ROOTFS_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
+          #echo "ROOTFS_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
+          echo "ROOTFS_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/qualcomm-linux/meta-qcom/${{ github.run_id }}-${{ github.run_attempt }}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
           echo "AUTO_LOGIN_PASSWORD_PROMPT=Password" >> qh-variables.ini
           echo "AUTO_LOGIN_PASSWORD=oelinux123" >> qh-variables.ini
           cat qh-variables.ini
