--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,8 +62,19 @@ jobs:
             IMAGE_TYPE="qcom-multimedia-image"
           fi
           echo "IMAGE_FILE_NAME=${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
+          export BUILD_URL_FILE="$GITHUB_WORKSPACE/build-url_${{ matrix.machine }}_${{ matrix.distro.name }}/build-url_${{ matrix.machine }}_${{ matrix.distro.name }}"
+          export BUILD_URL=""
+          echo "${BUILD_URL_FILE}"
+          if [ -f "$BUILD_URL_FILE" ]; then
+              # install dependencies
+              export BUILD_URL=$(cat "${BUILD_URL_FILE}")
+          fi
+          if [ -z "${BUILD_URL}" ]
+             echo "BUILD_URL missing"
+             exit 0
+          fi
           #echo "ROOTFS_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
-          echo "ROOTFS_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/qualcomm-linux/meta-qcom/${{ github.run_id }}-${{ github.run_attempt }}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
+          echo "ROOTFS_URL=${BUILD_URL}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
           echo "AUTO_LOGIN_PASSWORD_PROMPT=Password" >> qh-variables.ini
           echo "AUTO_LOGIN_PASSWORD=oelinux123" >> qh-variables.ini
           cat qh-variables.ini
