--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         machine:
           - qcs6490-rb3gen2-core-kit 
-          - qrb2210-rb1
+          - qrb2210-rb1-core-kit
         os:
           - poky-altcfg
           - qcom-distro
