Fix path in python script
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
                   oslist.add(o)
                   machinelist.add(m)
                   url = ""
-                  with open(fname, "r") as urlfile:
+                  with open(f"./urlfiles/{fname}", "r") as urlfile:
                       url = urlfile.read()
                   if not o in ftable:
                       ftable.update({o:{m: url}})
