--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,10 +95,11 @@ jobs:
                   else:
                       table_str += " |"
               table_str += "\n"
-          summary_file_name = os.environ("GITHUB_STEP_SUMMARY")
-          with open(summary_file_name, "a") as summaryfile:
-              summaryfile.write("## Download URLs\n")
-              summaryfile.write(table_str)
+          summary_file_name = os.environ.get("GITHUB_STEP_SUMMARY")
+          if summary_file_name:
+              with open(summary_file_name, "a") as summaryfile:
+                  summaryfile.write("## Download URLs\n")
+                  summaryfile.write(table_str)
 
 #  additional-artifacts:
 #    strategy:
