--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,92 +23,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/checkout@v4
+      - name: Run kas build
+        uses: ./.github/actions/lava-test-plans
         with:
-          #repository: qualcomm-linux/lava-test-plans
-          repository: mwasilew/lava-test-plans
-          path: lava-test-plans
-          #ref: 054bc5d39fa5014851ec97ff38940df7bd0f5bd6
-          ref: dry-run-path
-
-      - name: 'Download build URLs'
-        uses: actions/download-artifact@v4
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          run-id: ${{ inputs.build_id }}
-          pattern: build-url_*
-
-      - name: Run lava-test-plans
-        run: |
-          cd lava-test-plans && pip install .
-          lava-test-plans --help
-          #echo "PROJECT_NAME=${GITHUB_REPOSITORY#*/}" >> variables.ini
-          #echo "PROJECT=projects/${GITHUB_REPOSITORY#*/}/" >> variables.ini
-          echo "PROJECT_NAME=meta-qcom" >> qh-variables.ini
-          echo "PROJECT=projects/meta-qcom/" >> qh-variables.ini
-          echo "LAVA_JOB_PRIORTIY=50" >> qh-variables.ini
-          echo "DEVICE_TYPE=${{ matrix.machine }}" >> qh-variables.ini
-          echo "OS_INFO=qcom-distro" >> qh-variables.ini
-          echo "BUILD_NUMBER=${{ github.run_id }}-${{ github.run_attempt }}" >> qh-variables.ini
-          echo "DOCKER_IMAGE_POSTPROCESS=ghcr.io/foundriesio/lava-lmp-sign:main" >> qh-variables.ini
-          echo "BOOT_IMG_FILE=boot-apq8096-db820c-qcom-armv8a.img" >> qh-variables.ini
-          echo "ROOTFS_IMG_FILE=core-image-base-qcom-armv8a.rootfs.ext4" >> qh-variables.ini
-          #echo "BUILD_DOWNLOAD_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/" >> qh-variables.ini
-          echo "BUILD_DOWNLOAD_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/qualcomm-linux/meta-qcom/${{ github.run_id }}-${{ github.run_attempt }}/" >> qh-variables.ini
-          echo "AUTH_HEADER_NAME=Authentication" >> qh-variables.ini
-          echo "AUTH_HEADER_TOKEN=Q_GITHUB_TOKEN" >> qh-variables.ini
-          IMAGE_TYPE="core-image-base"
-          if [ "${{ matrix.distro.name }}" = "qcom-distro" ]; then
-            IMAGE_TYPE="qcom-multimedia-image"
-          fi
-          echo "IMAGE_FILE_NAME=${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
-          export BUILD_URL_FILE="$GITHUB_WORKSPACE/build-url_${{ matrix.machine }}_${{ matrix.distro.name }}/build-url_${{ matrix.machine }}_${{ matrix.distro.name }}"
-          export BUILD_URL=""
-          echo "${BUILD_URL_FILE}"
-          if [ -f "$BUILD_URL_FILE" ]; then
-              # install dependencies
-              export BUILD_URL=$(cat "${BUILD_URL_FILE}")
-          fi
-          if [ -z "${BUILD_URL}" ]; then
-             echo "BUILD_URL missing"
-             exit 0
-          fi
-          #echo "ROOTFS_URL=https://quic-yocto-fileserver-1029608027416.us-central1.run.app/${GITHUB_REPOSITORY}/${{ github.run_id }}-${{ github.run_attempt }}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
-          echo "ROOTFS_URL=${BUILD_URL}/${{ matrix.distro.name }}/${{ matrix.machine }}/${IMAGE_TYPE}-${{ matrix.machine }}.rootfs.qcomflash.tar.gz" >> qh-variables.ini
-          echo "AUTO_LOGIN_PASSWORD_PROMPT=Password" >> qh-variables.ini
-          echo "AUTO_LOGIN_PASSWORD=oelinux123" >> qh-variables.ini
-          cat qh-variables.ini
-          #lava-test-plans --dry-run --variables qh-variables.ini --test-plan "${GITHUB_REPOSITORY#*/}" --device-type "${{ matrix.machine }}" --verbose 10
-          lava-test-plans --dry-run --variables qh-variables.ini --test-plan "meta-qcom/${{ matrix.distro.name }}" --device-type "${{ matrix.machine }}" --dry-run-path ../${{ matrix.machine }}-${{ matrix.distro.name }}
-
-      - name: "Generate testjobs"
-        run: |
-          export BUILD_URL_FILE="$GITHUB_WORKSPACE/build-url_${{ matrix.machine }}_${{ matrix.distro.name }}/build-url_${{ matrix.machine }}_${{ matrix.distro.name }}"
-          echo "${BUILD_URL_FILE}"
-          if [ -f "$BUILD_URL_FILE" ]; then
-              # install dependencies
-              export BUILD_URL=$(cat "${BUILD_URL_FILE}")
-              pip install jinja2
-              if [ "${{ matrix.machine }}" = "qcom-armv8a" ]; then
-                  python3 ci/generatetests.py --templates ci/lava --os ${{ matrix.distro.name }} --device dragonboard-410c --build-url "${BUILD_URL}"
-                  python3 ci/generatetests.py --templates ci/lava --os ${{ matrix.distro.name }} --device dragonboard-820c --build-url "${BUILD_URL}"
-                  echo "MACHINE=dragonboard" >> $GITHUB_ENV
-              else
-                  python3 ci/generatetests.py --templates ci/lava --os ${{ matrix.distro.name }} --device ${{ matrix.machine }} --build-url "${BUILD_URL}"
-                  echo "MACHINE=${{ matrix.machine }}" >> $GITHUB_ENV
-              fi
-          fi
-
-      - name: "List files"
-        run: |
-          echo $GITHUB_WORKSPACE
-          ls -R $GITHUB_WORKSPACE
-
-      - name: 'Upload test jobs'
-        uses: actions/upload-artifact@v4
-        with:
-          name: testjobs-${{ matrix.machine }}-${{ matrix.distro.name }}
-          path: ${{ env.MACHINE}}*-${{ matrix.distro.name }}
+          machine: ${{matrix.machine}}
+          distro_name: ${{matrix.distro.name}}
+          build_id: ${{github.build_id}}
 
   prepare-job-list:
     needs: prepare-jobs
