Fix action syntax
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
           machine: ${{matrix.machine}}
           distro_name: ${{matrix.distro.name}}
           build_id: ${{github.build_id}}
+          gh_token: ${{ secrets.GITHUB_TOKEN }}
 
   prepare-job-list:
     needs: prepare-jobs
