--- a/.github/actions/lava-test-plans/action.yml
+++ b/.github/actions/lava-test-plans/action.yml
@@ -6,6 +6,8 @@ inputs:
     required: true
   build_id:
     required: true
+  gh_token:
+    required: true
 outputs:
   url:
     description: Location of the published binaries
@@ -24,11 +26,12 @@ runs:
       - name: 'Download build URLs'
         uses: actions/download-artifact@v4
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ inputs.gh_token }}
           run-id: ${{ inputs.build_id }}
           pattern: build-url_*
 
       - name: Run lava-test-plans
+        shell: bash
         run: |
           cd lava-test-plans && pip install .
           lava-test-plans --help
@@ -90,6 +93,7 @@ runs:
           cat gh-variables.ini
 
       - name: "List files"
+        shell: bash
         run: |
           echo $GITHUB_WORKSPACE
           ls -R $GITHUB_WORKSPACE
