--- a/.github/actions/lava-test-plans/action.yml
+++ b/.github/actions/lava-test-plans/action.yml
@@ -21,7 +21,7 @@ runs:
           repository: mwasilew/lava-test-plans
           path: lava-test-plans
           #ref: 054bc5d39fa5014851ec97ff38940df7bd0f5bd6
-          ref: dry-run-path
+          ref: fix_error_handling
 
       - name: 'Download build URLs'
         uses: actions/download-artifact@v6
