--- a/.github/workflows/publish-results.yml
+++ b/.github/workflows/publish-results.yml
@@ -50,8 +50,8 @@ jobs:
         uses: actions/create-github-app-token@v2
         if: always()
         with:
-          app_id: 2311695
-          private_key: ${{ secrets.PRIVATE_KEY_ENRICOMI_PUBLISH }}
+          app-id: 2311695
+          private-key: ${{ secrets.PRIVATE_KEY_ENRICOMI_PUBLISH }}
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
