--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,7 +71,7 @@ jobs:
       - name: 'Download job templates'
         uses: actions/download-artifact@v4
         with:
-          pattern: testjobs-*
+          pattern: boottest-*
 
       - name: 'Prepare output file name'
         run: |
