--- a/.github/actions/lava-test-plans/action.yml
+++ b/.github/actions/lava-test-plans/action.yml
@@ -13,6 +13,9 @@ inputs:
   prefix:
     description: "Prefix for the compressed file that is uploaded as workflow artifact"
     default: testjobs
+  testplan:
+    description: "Name of the test plan to use in job generation"
+    default: boot
 outputs:
   url:
     description: Location of the published binaries
@@ -26,7 +29,7 @@ runs:
           repository: mwasilew/lava-test-plans
           path: lava-test-plans
           #ref: 054bc5d39fa5014851ec97ff38940df7bd0f5bd6
-          ref: fix_error_handling
+          ref: qualcomm-tests
 
       - name: 'Download build URLs'
         uses: actions/download-artifact@v6
@@ -78,19 +81,19 @@ runs:
               echo "DEVICE_TYPE=dragonboard-410c" >> dragonboard-410c.ini
               echo "BOOT_IMG_FILE=boot-apq8016-sbc-qcom-armv8a.img" >> dragonboard-410c.ini
               cat dragonboard-410c.ini
-              lava-test-plans --dry-run --variables dragonboard-410c.ini --test-plan "meta-qcom/${{ inputs.distro_name }}" --device-type "dragonboard-410c" --dry-run-path ../dragonboard-410c-${{ inputs.distro_name }} || true
+              lava-test-plans --dry-run --variables dragonboard-410c.ini --test-plan "meta-qcom/${{ inputs.distro_name }}/${{ inputs.testplan }}" --device-type "dragonboard-410c" --dry-run-path ../dragonboard-410c-${{ inputs.distro_name }}-${{ inputs.testplan }} || true
               cp gh-variables.ini dragonboard-820c.ini
               echo "BOOT_IMG_FILE=boot-apq8096-db820c-qcom-armv8a.img" >> dragonboard-820c.ini
               echo "DEVICE_TYPE=dragonboard-820c" >> dragonboard-820c.ini
               cat dragonboard-820c.ini
-              lava-test-plans --dry-run --variables dragonboard-820c.ini --test-plan "meta-qcom/${{ inputs.distro_name }}" --device-type "dragonboard-820c" --dry-run-path ../dragonboard-820c-${{ inputs.distro_name }} || true
+              lava-test-plans --dry-run --variables dragonboard-820c.ini --test-plan "meta-qcom/${{ inputs.distro_name }}/${{ inputs.testplan }}" --device-type "dragonboard-820c" --dry-run-path ../dragonboard-820c-${{ inputs.distro_name }}-${{ inputs.testplan }} || true
               echo "MACHINE=dragonboard" >> $GITHUB_ENV
           else
               echo "DEVICE_TYPE=${{ inputs.machine }}" >> gh-variables.ini
 
               cat gh-variables.ini
               #lava-test-plans --dry-run --variables gh-variables.ini --test-plan "${GITHUB_REPOSITORY#*/}" --device-type "${{ inputs.machine }}" --verbose 10
-              lava-test-plans --dry-run --variables gh-variables.ini --test-plan "meta-qcom/${{ inputs.distro_name }}" --device-type "${{ inputs.machine }}" --dry-run-path ../${{ inputs.machine }}-${{ inputs.distro_name }} || true
+              lava-test-plans --dry-run --variables gh-variables.ini --test-plan "meta-qcom/${{ inputs.distro_name }}/${{ inputs.testplan }}" --device-type "${{ inputs.machine }}" --dry-run-path ../${{ inputs.machine }}-${{ inputs.distro_name }}-${{ inputs.testplan }} || true
               echo "MACHINE=${{ inputs.machine }}" >> $GITHUB_ENV
           fi
 
