--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,8 @@ jobs:
       fail-fast: true
       matrix:
         machine:
-          - qcs6490-rb3gen2-core-kit
-          - qrb2210-rb1-core-kit
+          - rb3gen2-core-kit
+          - rb1-core-kit
           - qcom-armv8a
           - iq-8275-evk
           - iq-9075-evk
