Fix upload path in lava-test-plans action
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/actions/lava-test-plans/action.yml
+++ b/.github/actions/lava-test-plans/action.yml
@@ -107,5 +107,5 @@ runs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.prefix }}-${{ inputs.machine }}-${{ inputs.distro_name }}
-          path: ${{ env.MACHINE}}*-${{ inputs.distro_name }}
+          path: ${{ env.MACHINE}}*-${{ inputs.distro_name }}*
 
