Re-add RB1 tests
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
           - rb3gen2-core-kit
           - qcs8300-ride-sx
           - qcs9100-ride-sx
-          #- qrb2210-rb1-core-kit
+          - rb1-core-kit
           #- qcom-armv8a
           #- qcom-armv7a
         distro:
