Fix conditional statement in test.yml
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -96,7 +96,7 @@ jobs:
   prepare-premerge-jobs:
     needs: submit-boot-jobs
     # run only if boot jobs are successful
-    if: jobs.submit-boot-job.outcome == 'success'
+    if: ${{ jobs.submit-boot-job.result }} == 'success'
     runs-on: ubuntu-latest
     strategy:
       matrix:
