Debug step output
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,6 +91,16 @@ jobs:
 #          echo "jobmatrix=$J" >> $GITHUB_OUTPUT
 #          echo "Preparing testjob files"
 
+  debug-output:
+    needs: prepare-boot-job-list
+    runs-on: ubuntu-latest
+    steps:
+      - name: "List jobs"
+        id: listjobs
+        run: |
+          echo "${{ needs.prepare-boot-job-list.outputs.jobmatrix }}"
+
+
   submit-boot-job:
     needs: prepare-boot-job-list
     runs-on: ubuntu-latest
