--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,7 @@ jobs:
           python-version: '3.x'
       - uses: jannekem/run-python-script-action@v1
         name: "List jobs"
+        id: listjobs
         with:
           fail-on-error: false
           script: |
