--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,14 +73,6 @@ jobs:
             set_output("jobmatrix", str({"target": target}))
             print({"target": target})
 
-      - name: Print errors
-#        if: steps.script.outputs.error == 'true'
-        run: |
-          printenv "SCRIPT_STDOUT"
-          printenv "SCRIPT_STDERR"
-        env:
-          SCRIPT_STDOUT: ${{ steps.script.outputs.stdout }}
-          SCRIPT_STDERR: ${{ steps.script.outputs.stderr }}
 
 #      - name: "List jobs"
 #        id: listjobs
@@ -91,16 +83,6 @@ jobs:
 #          J=$(jq -cn --argjson jobfiles "$JOBFILES" '{target: $jobfiles}')
 #          echo "jobmatrix=$J" >> $GITHUB_OUTPUT
 #          echo "Preparing testjob files"
-
-  debug-output:
-    needs: prepare-boot-job-list
-    runs-on: ubuntu-latest
-    steps:
-      - name: "List jobs"
-        id: listjobs
-        run: |
-          echo "${{ needs.prepare-boot-job-list.outputs.jobmatrix }}"
-
 
   submit-boot-job:
     needs: prepare-boot-job-list
@@ -139,7 +121,7 @@ jobs:
         id: out
         with:
           matrix-step-name: ${{ github.job }}
-          matrix-key: ${{ matrix.platform }}
+          matrix-key: ${{ matrix.target.name }}
           outputs: |-
             result: ${{ steps.submit.outcome }}
 
